--- a/src/app/features/login/infra/components/login/login.component.html
+++ b/src/app/features/login/infra/components/login/login.component.html
@@ -1,39 +1,96 @@
-<aplz-ui-logo size="lg"></aplz-ui-logo>
+<div class="main-container">
+  <form class="container" [formGroup]="form" (ngSubmit)="login()">
+    <aplz-ui-logo size="lg"></aplz-ui-logo>
+    <h2 class="text-center leading-7 text-xl">
+      Iniciar sesión como comerciante
+    </h2>
+    <div class="grid gap-8 mb-6">
+      <label class="aplz-input">
+        <input
+          type="text"
+          class="aplazo-base-input"
+          placeholder="Escribe tu correo electrónico"
+          formControlName="username"
+          aplazoNoWhiteSpace
+          aplazoLowercase
+        />
+        <span class="aplz-label">Correo electrónico o Usuario</span>
+        <div *ngIf="username.invalid && username.touched" class="error">
+          <span *ngIf="username.errors?.['required']">Campo requerido</span>
 
-<form [formGroup]="form" (ngSubmit)="login()">
-  <div class="grid gap-6 mb-6 md:grid-cols-2">
-    <div>
-      <label for="username" class="block mb-2 text-sm font-medium text-dark">
-        Correo electrónico
+          <span *ngIf="username.errors?.['emailValidate']"
+            >Formato de correo inválido</span
+          >
+        </div>
       </label>
-      <input
-        type="text"
-        id="username"
-        class="bg-dark-background border border-dark-secondary text-dark rounded-lg focus:ring-special-info focus:border-special-info block w-full p-2.5"
-        placeholder="my_example_username"
-        formControlName="username"
-      />
-    </div>
-    <div>
-      <label for="password" class="block mb-2 text-sm font-medium text-dark">
-        Password
+      <label class="aplz-input">
+        <input
+          [type]="isPasswordVisible ? 'text' : 'password'"
+          class="aplazo-base-input"
+          placeholder="Escribe tu contraseña"
+          formControlName="password"
+        />
+        <span class="aplz-label">Contraseña</span>
+        <div *ngIf="password.invalid && password.touched" class="error">
+          <span *ngIf="password.errors?.['required']">Campo requerido</span>
+        </div>
+        <button
+          type="button"
+          class="toggle-password"
+          (click)="togglePasswordVisibility()"
+          aria-label="Mostrar u ocultar contraseña"
+        >
+          <svg
+            *ngIf="isPasswordVisible"
+            class="w-6 h-6 text-gray-800 dark:text-white"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="#898e8f"
+              stroke-width="2"
+              d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"
+            />
+            <path
+              stroke="#898e8f"
+              stroke-width="2"
+              d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+            />
+          </svg>
+          <svg
+            *ngIf="!isPasswordVisible"
+            class="w-6 h-6 text-gray-800 dark:text-white"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="#898e8f"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M3.933 13.909A4.357 4.357 0 0 1 3 12c0-1 4-6 9-6m7.6 3.8A5.068 5.068 0 0 1 21 12c0 1-3 6-9 6-.314 0-.62-.014-.918-.04M5 19 19 5m-4 7a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+            />
+          </svg>
+        </button>
       </label>
-      <input
-        type="password"
-        id="password"
-        class="bg-dark-background border border-dark-secondary text-dark rounded-lg focus:ring-special-info focus:border-special-info block w-full p-2.5"
-        placeholder="•••••••••"
-        formControlName="password"
-      />
     </div>
-  </div>
-  <button
-    aplzButton
-    aplzAppearance="stroked"
-    aplzColor="dark"
-    size="md"
-    type="submit"
-  >
-    Entrar
-  </button>
-</form>
+    <button
+      aplzButton
+      aplzAppearance="stroked"
+      aplzColor="dark"
+      size="md"
+      type="submit"
+      [rounded]="true"
+    >
+      INICIAR SESIÓN
+    </button>
+  </form>
+</div>
