--- a/src/app/features/shared/components/input/src/aplazo-input.component.html
+++ b/src/app/features/shared/components/input/src/aplazo-input.component.html
@@ -3,7 +3,7 @@
     [type]="type"
     class="aplazo-base-input"
     [placeholder]="placeholder"
-    formControlName="password"
+    [formControl]="control"
     [class.error]="error"
   />
   <span class="aplz-label">{{ label }}</span>
