--- a/src/app/features/home/infra/components/home.component.html
+++ b/src/app/features/home/infra/components/home.component.html
@@ -1,20 +1,35 @@
 <div class="container">
   <h2>RESUMEN DE PEDIDOS</h2>
 
+  <form [formGroup]="filters">
+    <h3>Filtros:</h3>
+    <aplz-multiselect
+      [options]="branches"
+      [control]="branchId"
+      placeholder="Branch ID"
+    ></aplz-multiselect>
+    <aplz-input
+      type="date"
+      label="Fecha:"
+      placeholder="Fecha"
+      [control]="date"
+    ></aplz-input>
+  </form>
+
   <div class="box">
     <div>
       <h5>TOTAL DE VENTAS</h5>
-      <p>$0.00</p>
+      <p>${{ totals.total_price.toFixed(2) || "$0.00" }}</p>
     </div>
     <div class="separator"></div>
     <div>
       <h5>NÚMERO DE PEDIDOS</h5>
-      <p>0</p>
+      <p>{{ totals.total_records || "0" }}</p>
     </div>
     <div class="separator"></div>
     <div>
       <h5>TICKET PROMEDIO</h5>
-      <p>$0.00</p>
+      <p>${{ totals.average_price.toFixed(2) || "$0.00" }}</p>
     </div>
   </div>
 </div>
