--- a/src/app/features/shared/components/input/src/aplazo-input.component.scss
+++ b/src/app/features/shared/components/input/src/aplazo-input.component.scss
@@ -17,7 +17,7 @@
     display: block;
     width: 100%;
     border: 0.5px solid #898e8f;
-    padding: 10px;
+    padding: 10px 35px;
     color: #898e8f;
     background: transparent;
     border-radius: 10px;
